Fix github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css"/>
 
     <!-- Resource for virtual keyboard -->
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="./assets/js/jkeyboard.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/jkeyboard.css">
   </head>
